Archive2/61/2a8b36f9a57196/output
main.cpp:9:33: error: '::main' must return 'int'
 void main (int argc, char** argv) {
                                 ^
